--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "main": "webview-dist/index.js",
   "description": "Tauri plugin for file uploads through HTTP",
   "types": "webview-dist/index.d.ts",
+  "files": [
+    "webview-dist"
+  ],
   "scripts": {
     "build": "rollup -c ./webview-src/rollup.config.js",
     "prepublishOnly": "yarn build",
