--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "tauri-plugin-upload"
 version = "0.0.0"
-authors = [ "You" ]
-description = ""
+authors = [ "Tauri Programme within The Commons Conservancy" ]
+description = "Tauri Programme within The Commons Conservancy"
 edition = "2018"
 exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
 
