--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "tauri-plugin-upload"
 version = "0.0.0"
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 description = "Tauri Programme within The Commons Conservancy"
-edition = "2018"
+license = "Apache-2.0 OR MIT"
+edition = "2021"
 exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
 
 [dependencies]
