--- a/examples/svelte-app/package.json
+++ b/examples/svelte-app/package.json
@@ -1,33 +1,34 @@
 {
   "name": "svelte-app",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public",
-    "validate": "svelte-check",
+    "start": "sirv public --no-clear",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
     "tauri": "tauri"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "20.0.0",
-    "@rollup/plugin-node-resolve": "13.0.5",
-    "@rollup/plugin-typescript": "8.2.5",
-    "@tauri-apps/cli": "1.0.0-beta.10",
-    "@tsconfig/svelte": "2.0.1",
-    "rollup": "2.57.0",
-    "rollup-plugin-css-only": "3.1.0",
-    "rollup-plugin-livereload": "2.0.5",
-    "rollup-plugin-svelte": "7.1.0",
-    "rollup-plugin-terser": "7.0.2",
-    "svelte": "3.43.0",
-    "svelte-check": "2.2.6",
-    "svelte-preprocess": "4.9.5",
-    "tslib": "2.3.1",
-    "typescript": "4.4.3"
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-typescript": "^8.0.0",
+    "@tauri-apps/cli": "^1.0.0-beta.10",
+    "@tsconfig/svelte": "^2.0.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "svelte": "^3.0.0",
+    "svelte-check": "^2.0.0",
+    "svelte-preprocess": "^4.0.0",
+    "tslib": "^2.0.0",
+    "typescript": "^4.0.0"
   },
   "dependencies": {
-    "sirv-cli": "1.0.14",
+    "sirv-cli": "^2.0.0",
     "@tauri-apps/api": "1.0.0-beta.8",
-    "tauri-plugin-upload-api": "link:../../"
+    "tauri-plugin-upload-api": "../../"
   }
 }
