--- a/examples/svelte-app/src-tauri/Cargo.toml
+++ b/examples/svelte-app/src-tauri/Cargo.toml
@@ -2,18 +2,22 @@
 name = "app"
 version = "0.1.0"
 description = "A Tauri App"
-authors = [ "You" ]
+authors = ["you"]
+license = ""
 repository = ""
+default-run = "app"
 edition = "2018"
 
-[dependencies]
-serde_json = "1.0"
-serde = { version = "1.0", features = [ "derive" ] }
-tauri = { version = "1.0.0-beta.8", features = [ "api-all" ] }
-tauri-plugin-upload = { path = "../../../" }
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
 tauri-build = { version = "1.0.0-beta.4" }
+
+[dependencies]
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+tauri = { version = "1.0.0-beta.8" , features = ["api-all"] }
+tauri-plugin-upload = { path = "../../../" }
 
 [features]
 default = [ "custom-protocol" ]
