--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "tauri-plugin-upload-api",
-  "version": "0.1.0",
-  "description": "Tauri plugin for file uploads through HTTP",
-  "license": "Apache-2.0 OR MIT",
-  "authors": [
-    "Tauri Programme within The Commons Conservancy"
-  ],
-  "type": "module",
-  "browser": "webview-dist/index.min.js",
-  "types": "webview-dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./webview-dist/index.mjs"
+    "name": "tauri-plugin-upload-api",
+    "version": "0.1.0",
+    "description": "Tauri plugin for file uploads through HTTP",
+    "license": "Apache-2.0 OR MIT",
+    "authors": [
+        "Tauri Programme within The Commons Conservancy"
+    ],
+    "type": "module",
+    "browser": "webview-dist/index.min.js",
+    "types": "webview-dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./webview-dist/index.mjs"
+        },
+        "./package.json": "./package.json"
     },
-    "./package.json": "./package.json"
-  },
-  "files": [
-    "webview-dist"
-  ],
-  "scripts": {
-    "build": "rollup -c ./webview-src/rollup.config.js",
-    "prepublishOnly": "yarn build",
-    "pretest": "yarn build"
-  },
-  "devDependencies": {
-    "@rollup/plugin-node-resolve": "13.1.3",
-    "@rollup/plugin-typescript": "8.3.0",
-    "rollup": "2.67.2",
-    "rollup-plugin-terser": "7.0.2",
-    "type-fest": "2.11.2",
-    "typescript": "4.5.5"
-  },
-  "dependencies": {
-    "@tauri-apps/api": "1.0.0-beta.8",
-    "tslib": "2.3.1"
-  }
+    "files": [
+        "webview-dist"
+    ],
+    "scripts": {
+        "build": "rollup -c ./webview-src/rollup.config.js",
+        "prepublishOnly": "yarn build",
+        "pretest": "yarn build"
+    },
+    "devDependencies": {
+        "@rollup/plugin-node-resolve": "13.1.3",
+        "@rollup/plugin-typescript": "8.3.0",
+        "rollup": "2.67.2",
+        "rollup-plugin-terser": "7.0.2",
+        "type-fest": "2.11.2",
+        "typescript": "4.5.5"
+    },
+    "dependencies": {
+        "@tauri-apps/api": "1.0.0-rc.0",
+        "tslib": "2.3.1"
+    }
 }
