--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ tokio-util = { version = "0.7", features = [ "codec" ] }
 reqwest = { version = "0.11", features = [ "json", "stream" ] }
 futures = "0.3"
 read-progress-stream = "1.0.0"
+url = "2.2.2"
